# best-epic-gd-mods

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
resources/: BI_GameSheet-hd.plist  BI_GameSheet-uhd.plist  BI_GameSheet.plist  BI_destroyedUsers.plist
src/: capacity-fix.cpp  level-info.cpp  main.cpp  mapped-hooks.hpp  more-button.cpp  page-limit.cpp  utils.cpp  utils.hpp
src/delegates/: BILeaderboardDelegate.h  BISearchObjectDelegate.h  DialogCloseDelegate.h  IDRangeDelegate.h  PageNumberDelegate.h
src/layers/: CustomCreatorLayer.cpp  CustomCreatorLayer.h  CustomLevelSearchLayer.cpp  CustomLevelSearchLayer.h  CvoltonAlertLayerStub.cpp  CvoltonAlertLayerStub.h  CvoltonListView.cpp  CvoltonListView.h  CvoltonOptionsLayer.cpp  CvoltonOptionsLayer.h  CvoltonSearchOptions.cpp  CvoltonSearchOptions.h  CvoltonUpdateLayer.cpp  CvoltonUpdateLayer.h  DailyCell.cpp  DailyCell.h  DailyListView.cpp  DailyListView.h  DailyViewLayer.cpp  DailyViewLayer.h  ExtendedLevelInfo.cpp  ExtendedLevelInfo.h  IDRangePopup.cpp  IDRangePopup.h  JumpToPageLayer.cpp  JumpToPageLayer.h  LeaderboardListView.cpp  LeaderboardListView.h  LeaderboardViewLayer.cpp  LeaderboardViewLayer.h  LevelBrowserEndLayer.cpp  LevelBrowserEndLayer.h  LevelCategorySearchAlert.cpp  LevelCategorySearchAlert.h  LevelIDLayer.cpp  LevelIDLayer.h  LevelSearchListView.cpp  LevelSearchListView.h  LevelSearchViewLayer.cpp  LevelSearchViewLayer.h  (+20 more)
src/managers/: BetterInfoCache.cpp  BetterInfoCache.h  BetterInfoOnline.cpp  BetterInfoOnline.h  BetterInfoScheduler.cpp  BetterInfoScheduler.h  BetterInfoStats.cpp  BetterInfoStats.h  CvoltonManager.cpp  CvoltonManager.h
src/objects/: BISearchObject.h  FLAlertResultHandler.cpp  FLAlertResultHandler.h
src_other/: geometricka-pomlcka.cpp
